Fix title filter on mobile

--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -27,6 +27,10 @@ h1 {
   padding-bottom: $spacing-base;
   filter: url(#goo-heavy) url(#chalk);
   // filter: url(#chalk-long-shadow);
+
+  @media screen and (max-width: $mobile-breakpoint) {
+    filter: url(#goo-heavy);
+  }
 }
 
 %h2 {
